--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "frontend-amazon-v2",
+	"description": "Special development",
+	"author": "Abduazimkhoja",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -9,14 +11,20 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"next": "latest",
 		"react": "latest",
-		"react-dom": "latest",
-		"next": "latest"
+		"react-dom": "latest"
 	},
 	"devDependencies": {
-		"typescript": "latest",
-		"@types/react": "latest",
+		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
 		"@types/node": "latest",
-		"@types/react-dom": "latest"
+		"@types/react": "latest",
+		"@types/react-dom": "latest",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.4",
+		"tailwindcss": "^3.3.3",
+		"typescript": "latest"
 	}
 }
