--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.5.1",
+		"clsx": "^2.0.0",
 		"next": "latest",
 		"react": "latest",
-		"react-dom": "latest"
+		"react-dom": "latest",
+		"react-icons": "^4.11.0"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
