--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"axios": "^1.5.1",
 		"clsx": "^2.0.0",
+		"js-cookie": "^3.0.5",
 		"next": "latest",
 		"react": "latest",
 		"react-dom": "latest",
@@ -20,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
+		"@types/js-cookie": "^3.0.4",
 		"@types/node": "latest",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
