--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
+		"@tanstack/react-query": "^4.36.1",
 		"axios": "^1.5.1",
 		"clsx": "^2.0.0",
 		"js-cookie": "^3.0.5",
 		"next": "latest",
 		"react": "latest",
 		"react-dom": "latest",
-		"react-icons": "^4.11.0"
+		"react-icons": "^4.11.0",
+		"react-simple-star-rating": "^5.1.7",
+		"redux-persist": "^6.0.0",
+		"sass": "^1.69.0"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
