--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/node": "latest",
 		"@types/react": "latest",
 		"@types/react-dom": "latest",
+		"@types/redux-persist": "^4.3.1",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
