--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react": "latest",
 		"react-dom": "latest",
 		"react-icons": "^4.11.0",
+		"react-redux": "^8.1.3",
 		"react-simple-star-rating": "^5.1.7",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.69.0"
