--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.9.7",
-		"@tanstack/react-query": "^4.36.1",
-		"axios": "^1.5.1",
-		"clsx": "^2.0.0",
+		"@reduxjs/toolkit": "^2.2.2",
+		"@tanstack/react-query": "^5.28.6",
+		"axios": "^1.6.8",
+		"clsx": "^2.1.0",
 		"js-cookie": "^3.0.5",
-		"next": "latest",
-		"react": "latest",
-		"react-dom": "latest",
-		"react-hook-form": "^7.47.0",
-		"react-icons": "^4.11.0",
-		"react-redux": "^8.1.3",
+		"next": "^14.1.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.1",
+		"react-icons": "^5.0.1",
+		"react-redux": "^9.1.0",
 		"react-simple-star-rating": "^5.1.7",
 		"redux-persist": "^6.0.0",
-		"sass": "^1.69.0"
+		"sass": "^1.72.0"
 	},
 	"devDependencies": {
-		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
-		"@types/js-cookie": "^3.0.5",
-		"@types/node": "latest",
-		"@types/react": "latest",
-		"@types/react-dom": "latest",
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^20.11.30",
+		"@types/react": "^18.2.67",
+		"@types/react-dom": "^18.2.22",
 		"@types/redux-persist": "^4.3.1",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.4",
-		"tailwindcss": "^3.3.3",
-		"typescript": "latest"
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.12",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.4.3"
 	},
 	"main": "index.js",
 	"repository": "https://github.com/Abduazimkhoja/Amazon-frontend.git",
