--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-icons": "^5.0.1",
 		"react-redux": "^9.1.0",
 		"react-simple-star-rating": "^5.1.7",
+		"react-transition-group": "^4.4.5",
 		"redux-persist": "^6.0.0",
 		"sass": "^1.72.0"
 	},
@@ -32,6 +33,7 @@
 		"@types/node": "^20.11.30",
 		"@types/react": "^18.2.70",
 		"@types/react-dom": "^18.2.22",
+		"@types/react-transition-group": "^4.4.10",
 		"@types/redux-persist": "^4.3.1",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
