--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-SERVER_URL = http://localhost:4200/api
+SERVER_URL = https://amazon-backend-jx1c.onrender.com
+SERVER_URL_API = https://amazon-backend-jx1c.onrender.com/api
+SERVER_URL_HOST = amazon-backend-jx1c.onrender.com
+# SERVER_URL = http://localhost:4200
+# SERVER_URL_API = http://localhost:4200/api
+# SERVER_URL_HOST = localhost:4200
 APP_URL = http://localhost:3000
