--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@chakra-ui/next-js": "^2.2.0",
+		"@chakra-ui/react": "^2.8.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
 		"@reduxjs/toolkit": "^2.2.2",
 		"@tanstack/react-query": "^5.28.8",
 		"axios": "^1.6.8",
 		"clsx": "^2.1.0",
+		"framer-motion": "^11.1.7",
 		"js-cookie": "^3.0.5",
 		"next": "^14.1.4",
 		"react": "^18.2.0",
